Fixed test drive modal and vehicle assignment

--- a/force-app/main/default/classes/TestDriveController.cls
+++ b/force-app/main/default/classes/TestDriveController.cls
@@ -44,6 +44,42 @@ public without sharing class TestDriveController {
     @AuraEnabled
     public static List<Asset> getTestDriveVehicles(){
         List<String> keys = new List<String>{'asset_01','asset_02','asset_03'};
-        return [SELECT Id, Name, Image_url__c FROM Asset where demo_key__c in :keys];
+        return [SELECT 
+            Id, 
+            Name, 
+            Image_url__c,
+            Motor__c,
+            Color__c,
+            Edition__c,
+            License_Plate__c,
+            battery__c,
+            Vehicle_Version__c
+            FROM Asset where demo_key__c in :keys];
     }
+
+    @AuraEnabled
+    public static Test_Drive__c assignVehicle(String tdid, String assetId){
+        // Id vid = [SELECT Id FROM Asset WHERE Id = 'assignedId' LIMIT 1].Id;
+        System.debug('tdid" ' + tdid + ', assetId: ' + assetId);
+         Test_Drive__c td = [SELECT 
+                    Date__c, 
+                    Driver__r.MailingStreet,
+                    Driver__r.MailingPostalCode,
+                    Driver__r.MailingCity,
+                    Driver__r.MailingCountry,
+                    Status__c,
+                    assigned_Vehicle__r.Motor__c,
+                    assigned_Vehicle__r.Edition__c,
+                    assigned_Vehicle__r.Name,
+                    assigned_Vehicle__r.Image_url__c,
+                    assigned_Vehicle__r.License_Plate__c,
+                    assigned_Vehicle__r.Vehicle_Version__c
+                FROM Test_Drive__c 
+                WHERE Id = :tdid 
+                LIMIT 1];
+        td.assigned_Vehicle__c = assetId;
+        update td;
+        return td;
+    }
+  
 }
